[gd_scene load_steps=11 format=1]

[ext_resource path="res://coin_collect.gd" type="Script" id=1]
[ext_resource path="res://sprites/bonus/animated_cross/cross_03.png" type="Texture" id=2]
[ext_resource path="res://sprites/bonus/animated_cross/cross_04.png" type="Texture" id=3]
[ext_resource path="res://sprites/bonus/animated_cross/cross_05.png" type="Texture" id=4]
[ext_resource path="res://sprites/bonus/animated_cross/cross_06.png" type="Texture" id=5]
[ext_resource path="res://sprites/bonus/animated_cross/cross_07.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.604

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

resource/name = "taken"
length = 0.4
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Coin:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]

resource/name = "flash"
length = 1.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Coin:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8, 1.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 4, 4 ]
}

[node name="CoinCross" type="Area2D" groups=[
"coins",
]]

transform/pos = Vector2( -57.2688, -2.1218 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.24559, 0, 0, 2.24559, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Coin" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )
animation = "default"
frame = 4

[node name="collision" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 2.24559, 2.24559 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/taken = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="crushParts" type="Particles2D" parent="."]

config/amount = 11
config/lifetime = 2.0
config/time_scale = 4.61462
config/preprocess = 0.1
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.25
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = -27.9
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 27.68
params/radial_accel = 0.0
params/tangential_accel = -2.86102e-06
params/damping = 0.0
params/initial_angle = 19.46
params/initial_size = 7.0
params/final_size = 3.0
params/hue_variation = 0.0
params/anim_speed_scale = 0.0
params/anim_initial_pos = 0.0
randomness/direction = -2.23517e-08
randomness/spin_velocity = -2.23517e-08
randomness/anim_initial_pos = 0.3
color/color = Color( 1, 0.963379, 0.0625, 1 )

[node name="anim2" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 4 )
playback/active = true
playback/speed = 1.4
blend_times = [  ]
autoplay = ""

[connection signal="body_enter" from="." to="." method="_on_body_enter"]

[connection signal="animation_started" from="anim" to="." method="_on_anim_animation_started"]

[connection signal="finished" from="anim" to="." method="_on_anim_finished"]


